# SFML_COMP4300_2020_Fall

./: .gitignore  CMakeLists.txt  README.md  build.sh
config/: assignment2
include/: ECS.h  entity.h  entity_manager.h  game_typdef.h  shape.h  transform.h
include/Assignment2/: collision.h  entity.h  entity_manager.h  game.h  score.h  transform.h  utils.h  vec2.h
include/Assignment2/components/: collision.h  input.h  lifespan.h  score.h  shape.h  transform.h
include/ECS/: entity.h  entity_manager.h  name.h  vec2.h
include/ECS_Practice/: bounding_box.h  entity_manager.h
include/Public/: utils.h  vec2.h
src/: CMakeLists.txt  ECS.cpp  gravity.cpp  intro_to_sfml.cpp
src/Assignment1/: CMakeLists.txt  README.md
src/Assignment2/: CMakeLists.txt  README.md  entity.cpp  entity_manager.cpp  game.cpp  main.cpp  utils.cpp  vec2.cpp
src/Assignment2/components/: CMakeLists.txt  shape.cpp
src/Assignment3/: CMakeLists.txt  README.md  main.cpp
src/ECS/: CMakeLists.txt  entity_manager.cpp  main.cpp
src/ECS_Practice/: CMakeLists.txt  README.md
src/Lab/: CMakeLists.txt
src/Lab/continuous_collision_detection/: CMakeLists.txt  main.cpp  main.h
src/Lab/lab_frame/: CMakeLists.txt  lab_frame.cpp  lab_frame.h
src/Lab/side-scrolling_action_platformer_frame/: CMakeLists.txt  main.cpp  main.h
src/Public/: CMakeLists.txt  vec2.cpp
