FILE(GLOB SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
SET(sub_project "continuous_collision_detection")
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
ADD_EXECUTABLE(${sub_project} ${SRC})
SET(sfml_lib sfml-system sfml-window sfml-graphics)
TARGET_LINK_LIBRARIES(${sub_project} PRIVATE Public ${sfml_lib})
TARGET_COMPILE_FEATURES(${sub_project} PRIVATE cxx_std_17)